--- a/configs/config.json
+++ b/configs/config.json
@@ -1,10 +1,16 @@
 {
-  "reminders": [
-    [10, 55, "morning"],
-    [15, 25, "lunch"],
-    [17, 55, "afternoon"],
-    [20, 1, "report"]
-  ],
+  "reminders": {
+    "break": [
+      { "hour": 14, "minute": 15, "title": "lunch" },
+      { "hour": 17, "minute": 45, "title": "afternoon" }
+    ],
+    "checkin": [
+      { "hour": 10, "minute": 55, "title": "morning" },
+      { "hour": 15, "minute": 25, "title": "lunch" },
+      { "hour": 17, "minute": 55, "title": "afternoon" }
+    ],
+    "report": [{ "hour": 20, "minute": 1, "title": "report" }]
+  },
   "holidays": [
     [9, 6, 2021],
     [11, 25, 2021],
