--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "conf": "^10.0.2",
-    "discord.js": "^13.1.0"
+    "discord.js": "^13.1.0",
+    "moment-timezone": "^0.5.33"
   }
 }
